--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ uvicorn = "^0.35.0"
 asyncpg = "^0.30.0"
 psycopg2-binary = "^2.9.10"
 bcrypt = "^4.3.0"
+prometheus-fastapi-instrumentator = "^7.1.0"
 
 
 [build-system]
